Add los nuevos archivos de la carpeta

--- a/index.html
+++ b/index.html
@@ -5,7 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<style>
+/*p:first-child {
+    color: pink;
+}
+p:last-child {
+    color: red;
+}
+p:nth-child(2n) {
+    color: blue;
+}*/
+p::first-letter {
+    color: red;
+    font-size: 20PX;
+}
+</style>
 <body>
-    
+    <p> Conejo</p>
+    <p> Perro</p>
+    <p> Vaca</p>
+    <p> Sapo</p>
 </body>
 </html>
