--- a/header.html
+++ b/header.html
@@ -10,12 +10,12 @@
 <style>
     body {
         margin: 0;
-        background-color: #AB88FF;
+        background-color: #8F57FD;
         font-family: 'Rubik', sans-serif;
 
     }
     .header {
-        background-color: #AB88FF;
+        background-color: #8F57FD;
         width: 100%;
         height: 100px;
         display: flex;
@@ -66,6 +66,28 @@
         color: white;
         font-size: 22px;
     }
+    .main {
+        height: 300px;
+    }
+    .main__title {
+        color: white;
+        font-size: 25px;
+    }
+    .input {
+        background-color: rgba(255, 255, 255, 0.1);
+        border: 2px solid white;
+        border-radius: 35px;
+        color: white;
+        font-family: 'Rubik', sans-serif;
+        font-size: 16px;
+        height: 50px;
+        padding: 0px 20px;
+        width: 70%;
+        outline: none;
+    }
+    ::placeholder {
+        color: white;
+    }
 </style>
 <body>
     <header class="header">
@@ -81,5 +103,9 @@
             </ul>
         </div>
     </header>
+    <section class="main">
+        <h2 class="main__title">¿Qué quieres ver hoy?</h2>
+        <input class="input" type="text" placeholder="Buscar...">
+    </section>
 </body>
 </html>
