--- a/carousel.html
+++ b/carousel.html
@@ -39,7 +39,7 @@
        10.- Ajusta los elementos para que no se salgan y empiecen de izq a derecha
 
     */
-  .carousel__item {
+  .carousel-item {
     background-color: blueviolet;
     width: 200px;
     height: 250px;
@@ -57,20 +57,20 @@
         2.- ~ Selecciona todos los elementos excepto el elemento que está seleccionado
         3.-
     */
-  .carousel__item:hover ~ .carousel__item {
+  .carousel-item:hover ~ .carousel-item {
     transform: translate3d(100px, 0, 0);
   }
    /*
         1.- Opacidad
     */
-  .carousel__container:hover .carousel__item {
+  .carousel__container:hover .carousel-item {
     opacity: 0.3;
   }
   /*
         1.- Escala en 1.5 la imagen seleccionada
         2.- Cuando se le haga hover a un elemento especīfico, pone la opacidad en 1.
     */
-  .carousel__container:hover .carousel__item:hover {
+  .carousel__container:hover .carousel-item:hover {
     transform: scale(1.5);
     opacity: 1;
   }
@@ -78,11 +78,18 @@
 <body>
   <section class="carousel">
     <div class="carousel__container">
-      <div class="carousel__item">
+      <div class="carousel-item">
+        <img src="action-adult-car-340779.jpg" alt="people">
       </div>
-      <div class="carousel__item">
+      <div class="carousel-item">
+        <img class="carousel-item__img" src="adam-miller-dBaz0xhCkPY-unsplash.jpg" alt="portrait">
+        <div class="carousel-item__details"></div>
       </div>
-      <div class="carousel__item">
+      <div class="carousel-item">
+        <img src="adult-beard-city-211050.jpg" alt="Face pinture">
+      </div>
+      <div class="carousel-item">
+        <img src="cap-dessert-face-886285.jpg" alt="Face pinture">
       </div>
     </div>
   </section>
