--- a/iniciar-sesion.html
+++ b/iniciar-sesion.html
@@ -7,30 +7,10 @@
   <!-- Font -->
   <link href="https://fonts.googleapis.com/css?family=Muli&display=swap" rel="stylesheet">
   <!-- Styles -->
-  <link rel="stylesheet" href="./styles.css">
+  <link rel="stylesheet" href="style.css">
   <!-- Title -->
   <title>Iniciar Sesión</title>
 </head>
-<style>
-  body {
-    margin: 0;
-    font-family: 'Muli', sans-serif;
-  }
-  .header {
-    align-items: center;
-    background-color: #21c08b;
-    color: white;
-    display: flex;
-    height: 100px;
-    justify-content: space-between;
-    top: 0px;
-    width: 100%;
-  }
-  .header__img {
-    margin-left: 30px;
-    width: 200px;
-  }
-</style>
 <body>
   <header class="header">
     <img class="header__img" src="../assets/logo-platzi-video-BW2.png" alt="Platzi Video">
