--- a/iniciar-sesion.html
+++ b/iniciar-sesion.html
@@ -7,7 +7,7 @@
   <!-- Font -->
   <link href="https://fonts.googleapis.com/css?family=Muli&display=swap" rel="stylesheet">
   <!-- Styles -->
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="StyleHome.scss">
   <!-- Title -->
   <title>Iniciar Sesión</title>
 </head>
